<resources>
    <string name="app_name">مستشفى جنة</string>

    <!-- toolbar titles-->
    <string name="login_activity">تسجيل الدخول</string>


    <!-- Nav -->
    <string name="nav_hello">Hello... </string>
    <string name="nav_detail">تطبيق جنة للاندرويد يهدف الى استخدام التكنولوجيا الحديثة فى مجال المؤتمرات وتسجيل الحجوزات سواء لمؤتمر جنة العلمى او مجموعة مستشفيات جنة</string>
    <string name="nav_info_title">About Janna Hospital</string>
    <string name="nav_booking_title">Booking</string>
    <string name="nav_question_title">Questions</string>
    <string name="nav_logout_title">Log Out</string>


    <!-- login fragment-->
    <string name="name_hint">Name</string>
    <string name="first_name_hint">الاسم الأول</string>
    <string name="last_name_hint">الاسم الثاني</string>
    <string name="address_hint">جهة العمل</string>
    <string name="phone_hint">Telephone</string>
    <string name="mobile_hint">Mobile</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="re_password_hint">Reenter password</string>
    <string name="login_button">Login</string>
    <string name="new_user_button">New User</string>

    <string name="name_empty">Enter your name</string>
    <string name="mobile_empty">Enter your mobile number</string>
    <string name="password_empty">Enter password</string>
    <string name="re_password_empty">Re-Enter password</string>
    <string name="repeating_not_right">Password must be the same</string>

    <string name="radio_doctor">Doctor</string>
    <string name="radio_patient">مريض</string>

    <!-- About -->
    <string name="hospital_name">Janna</string>

    <!--error fragment-->
    <string name="button_retry">إعادة المحاولة</string>
    <string name="common_error_message">حدث خطأ من فضلك اعد المحاولة</string>


    <!-- home fragment -->
    <string name="tab_about">عن مستشفي جنة</string>
    <string name="tab_session">المؤتمرات</string>
    <string name="tab_booking">الحجوزات</string>
    <string name="tab_question">أسئلة</string>

    <!-- events -->
    <string name="empty_events_list">لاتوجد مؤتمرات</string>
    <string name="add_question_button">أضف سؤال</string>
    <string name="question_hint">السؤال أو الاستفسار</string>
    <string name="cancel_button">إلغاء الأمر</string>
    <string name="question_empty">قم بكتابة سؤال صحيح</string>
    <string name="question_send_successfully">تم ارسال سؤالك بنجاح</string>

    <string name="rule_title">قواعد المؤتمر</string>
    <string name="sponsor_title">رعاة المؤتمر</string>
    <string name="session_title">Sessions</string>
    <string name="survey_title">الاستبيانات</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_share">Share</string>
    <string name="action_call">Call</string>
    <string name="action_music">Play</string>

    <string name="newses">أخبار المؤتمر</string>
    <string name="attendant">السادة الحضور</string>


    <string name="survey_button_text">أرسل الاستبيان</string>
    <string name="all_survey_questions_not_solved">إملأ كل أسئلة الاستبيان من فضلك</string>


    <string name="chair_text">Chairman</string>
    <string name="lecture_text">Lectures</string>

    <!-- Create booking -->
    <string name="title_booking">أضف حجز</string>
    <string name="clinic_hint">العيادة</string>
    <string name="spectial_hint">التخصص</string>
    <string name="notes_hint">ملاحظات</string>
    <string name="add_booking">أضف حجز</string>
    <string name="clinic_spinner_empty">قم باختيار عيادة</string>
    <string name="special_spinner_empty">قم باختيار تخصص</string>


    <!-- Managers mobiles -->
    <string-array name="managers_mobiles">
        <item>01116409935</item>
    </string-array>

    <string-array name="clinic_array">
        <item>اختر العيادة</item>
        <item>العيادة الخارجية</item>
        <item>العيادة الداخلية</item>
        <item>العيادة الوسطي</item>
        <item>العيادة العادية</item>
    </string-array>

    <string-array name="special_array">
        <item>اختر التخصص</item>
        <item>أسنان</item>
        <item>باطنة</item>
        <item>وسط</item>
        <item>كتف</item>
    </string-array>

</resources>
