<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.ishraq.janna.activity">

    <item
        android:id="@+id/action_call"
        android:icon="@android:drawable/ic_menu_call"
        android:title="@string/action_call"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_share"
        android:icon="@android:drawable/ic_menu_share"
        android:orderInCategory="100"
        android:title="@string/action_share"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_play"
        android:icon="@android:drawable/ic_media_play"
        android:orderInCategory="100"
        android:title="@string/action_music"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_stop"
        android:icon="@android:drawable/ic_media_pause"
        android:orderInCategory="100"
        android:title="@string/action_music"
        android:visible="false"
        app:showAsAction="always" />
</menu>
