<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/common_margin_padding_medium"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"/>

        <!--              Name                   -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputLayoutName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/nameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:hint="@string/name_hint"
                android:theme="@style/EditTextTest"/>
        </android.support.design.widget.TextInputLayout>

        <!--           First Name                -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputLayoutFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/firstNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:hint="@string/first_name_hint"
                android:theme="@style/EditTextTest"/>
        </android.support.design.widget.TextInputLayout>

        <!--           Second Name               -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputLayoutSecondName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/secondNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:hint="@string/last_name_hint"
                android:theme="@style/EditTextTest"/>
        </android.support.design.widget.TextInputLayout>

        <!--              Address                   -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputLayoutAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/addressEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:hint="@string/address_hint"
                android:theme="@style/EditTextTest" />
        </android.support.design.widget.TextInputLayout>

        <!--              Phone                   -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputLayoutPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/phoneEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:hint="@string/phone_hint"
                android:theme="@style/EditTextTest" />
        </android.support.design.widget.TextInputLayout>

        <!--              Mobile                   -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputLayoutMobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/mobileEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:hint="@string/mobile_hint"
                android:theme="@style/EditTextTest" />
        </android.support.design.widget.TextInputLayout>

        <!--              Email                   -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputLayoutEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:hint="@string/email_hint"
                android:theme="@style/EditTextTest"/>
        </android.support.design.widget.TextInputLayout>

        <!--              Password                   -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputLayoutPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:hint="@string/password_hint"
                android:theme="@style/EditTextTest" />
        </android.support.design.widget.TextInputLayout>

        <!--              Re write password                   -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputLayoutRePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/rePasswordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:hint="@string/re_password_hint"
                android:theme="@style/EditTextTest" />
        </android.support.design.widget.TextInputLayout>


        <RadioGroup
            android:id="@+id/radioType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/common_margin_padding_big">

            <RadioButton
                android:id="@+id/radioDoctor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_doctor"
                android:checked="true" />

            <RadioButton
                android:id="@+id/radioPatient"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_patient" />

        </RadioGroup>

        <Button
            android:id="@+id/registerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_user_button"
            android:textColor="@android:color/black"
            android:padding="@dimen/common_margin_padding_big"
            android:layout_weight="1"/>
    </LinearLayout>

</ScrollView>
