<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back1"
    android:rotationY="180">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/common_margin_padding_medium">

        <View
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize" />

        <!--              Name                   -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputLayoutName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/nameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name_hint"
                android:textColor="@android:color/black"
                android:theme="@style/EditTextTest" />
        </android.support.design.widget.TextInputLayout>

        <!--              Mobile                   -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputLayoutMobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/mobileEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mobile_hint"
                android:inputType="number"
                android:textColor="@android:color/black"
                android:theme="@style/EditTextTest" />
        </android.support.design.widget.TextInputLayout>

        <!--              Notes                   -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputLayoutNotes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/notesEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/notes_hint"
                android:textColor="@android:color/black"
                android:theme="@style/EditTextTest" />
        </android.support.design.widget.TextInputLayout>

        <Spinner
            android:id="@+id/clinicSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/clinic_array"/>

        <Spinner
            android:id="@+id/specialSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/special_array"/>


        <Button
            android:id="@+id/addBookingButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dip"
            android:padding="@dimen/common_margin_padding_big"
            android:text="@string/add_booking"
            android:textColor="@android:color/black" />
    </LinearLayout>

</ScrollView>